// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureFlagsView - Should render with false 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <h1>
        <i
          className="ids-icon__dashboard"
        />
         Feature flags
      </h1>
      <div
        className="section"
      >
        <div
          className="row"
        >
          <div
            className="col-md-12"
          >
            <p>
              boilerplate.featureFlag.test = false
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureFlagsView - Should render with true 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <h1>
        <i
          className="ids-icon__dashboard"
        />
         Feature flags
      </h1>
      <div
        className="section"
      >
        <div
          className="row"
        >
          <div
            className="col-md-12"
          >
            <p>
              boilerplate.featureFlag.test = true
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureFlagsView - Should render with undefined 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <h1>
        <i
          className="ids-icon__dashboard"
        />
         Feature flags
      </h1>
      <div
        className="section"
      >
        <div
          className="row"
        >
          <div
            className="col-md-12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
